# Dissertation

./: Final_Dissertation.ipynb  Total Bitcoin electricity consumption (yearly).csv  bitcoin_mining_features_final.csv  bitcoin_mining_features_master.csv  bitcoin_mining_features_scaled.csv  feature_engineering_results.pkl  model_selection_results.pkl  pyproject.toml  wgidataset.xlsx  wgidataset_excerpt.xlsx
